# clp

./: .gitignore  ULO_test.py  debug_run copy.py  debug_run.py  debug_run_Copy.py  make_project.py  quick_Analysis.ipynb
clp/: .gitignore  configurations.py  pyproject.toml  requirements-dev.txt
clp/clp/data/: br_original.py
clp/clp/decoders/: baseline.py  dblf.py  extreme_points.py  two_phase copy.py  two_phase.py  two_phase_copy.py
clp/clp/eval/: ULO_count.py  cg.py
clp/clp/ga/: evaluate.py  nsga2.py  population - Copy.py  population.py  population_copy.py
clp/clp/models/: geometry.py  items.py
clp/clp/polices/: box_order.py  rotation.py
clp/clp/results/: index.py  schema.py  writer.py
clp/clp/viz/: debug_viz.py  debug_viz_copy.py
clp/clp_tri_objective.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clp/datasets/: README.md
clp/results/: README.md  run_index.json
clp/results/BR-Modified-NSGA2_bi/: _overall_summary.json
clp/results/BR-Modified-NSGA2_bi/BR1/: class_summary.json
clp/results/BR-Modified-NSGA2_bi/_summary/: BR-Modified-NSGA2_bi_flat.csv  BR-Modified-NSGA2_bi_flat.json  BR-Modified-NSGA2_bi_flat.xlsx  BR-Modified-NSGA2_bi_summary.csv  BR-Modified-NSGA2_bi_summary.json  BR-Modified-NSGA2_bi_summary.xlsx  (+1 more)
clp/results/BR-Original-two_phase/: _overall_summary.json
clp/results/BR-Original1/: _overall_summary.json
clp/results/_comparison_plots/: merged_BR_original_summaries.xlsx
clp/scripts/: aggregate_ga_param_tuning.py  aggregate_results.py  compare_summaries.py  generate_br_modified.py  make_br_modified.py  write_dummy_run.py
(+3247 files in other folders)
